--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^4.10.1
   google_fonts: ^6.1.0
   cloud_firestore: ^4.9.3
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
