--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   google_fonts: ^6.1.0
   cloud_firestore: ^4.9.3
   get: ^4.6.6
+  image_picker: ^1.0.4
+  firebase_storage: ^11.3.1
+  cached_network_image: ^3.3.0
 
 dev_dependencies:
   flutter_test:
