--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image_picker: ^1.0.4
   firebase_storage: ^11.3.1
   cached_network_image: ^3.3.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
