--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_storage: ^11.3.1
   cached_network_image: ^3.3.0
   intl: ^0.18.1
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
