--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   cached_network_image: ^3.3.0
   intl: ^0.18.1
   path: ^1.8.3
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
