--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   intl: ^0.18.1
   path: ^1.8.3
   carousel_slider: ^4.2.1
+  expandable: ^5.0.1
 
 dev_dependencies:
   flutter_test:
