--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   path: ^1.8.3
   carousel_slider: ^4.2.1
   expandable: ^5.0.1
-  flutter_svg: ^2.0.7
+  csc_picker: ^0.2.7
 
 dev_dependencies:
   flutter_test:
